Message: Fix preview flickering for Stickers (#136)

--- a/src/pages/main/components/middle/Message.scss
+++ b/src/pages/main/components/middle/Message.scss
@@ -223,7 +223,7 @@
         opacity: 1;
         transition: opacity .3s ease;
 
-        &.hidden {
+        &.loaded {
           opacity: 0;
         }
       }
